# Jay-Montgomery-Johnson.github.io

./: index.html  pyproject.toml  static_site_generator.py
_site/: test-page.html
articles/: my_fake_article.md  other_article.md
html/: my_fake_article.html  other_article.html
src/: test-page.md
src/_posts/: 2024-11-14-welcome-to-jekyll.markdown
templates/: article_template.html  index_template.html
